Vitis_HLS/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp.clang-tidy.loop-label.out.log
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:1335:7: warning: Added loop label VITIS_LOOP_1213_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1213_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:1335:7: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2309:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2309:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2323:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2323:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2337:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2337:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:3936:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:3936:7: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6351:9: error: Resource with core_name: RAM_T2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=h core=RAM_T2P_BRAM
        ^
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6356:9: error: Resource with core_name: RAM_T2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=outBGR core=RAM_T2P_BRAM
        ^
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6359:2: warning: Added loop label VITIS_LOOP_37_1:   [xilinx-label-all-loops]
 for (u32 i = 0; i < (320*240); i++) {
 ^~~
 VITIS_LOOP_37_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6359:2: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6397:25: warning: Added loop label VITIS_LOOP_75_2:   [xilinx-label-all-loops]
                        for (u32 i = 0; i < kernel_size; i++) {
                        ^~~
                        VITIS_LOOP_75_2: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6397:25: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6411:5: warning: Added loop label VITIS_LOOP_89_3:   [xilinx-label-all-loops]
    for (u32 i = 0; i < (320*240); i++) {
    ^~~
    VITIS_LOOP_89_3: 
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6411:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGrRemoval_AXIS_ver2/BaGrRemoval_AXIs_ver2/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:6433:9: error: Resource with core_name: RAM_T2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=img core=RAM_T2P_BRAM
        ^
